--- a/views/head.html
+++ b/views/head.html
@@ -2,5 +2,6 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, max    imum-scale=1.0, user-scalable=no">
 
+{{template "js.html" .}}
 </head>
 
