made  test select2 on DishForm, need to custom a new multiple and ajax searchabel select dropdown menu,copied user data model definition,try to understand utils\/forms.go's func order ,how it impliment the SelectData both in parent and child struct, golang's simple inheritance

--- a/views/head.html
+++ b/views/head.html
@@ -8,7 +8,9 @@
 {{compress_css "lib"}}
 {{compress_css "app"}}
 {{compress_js  "lib"}}
+{{compress_js  "app"}}
 
+{{compress_js  "admin"}}
 {{compress_js  "user"}}
 
 </head>
